[gd_scene load_steps=4 format=3 uid="uid://dvgvvt7cl7ihx"]

[ext_resource type="Script" path="res://Scripts/item_entity.gd" id="1_oi086"]
[ext_resource type="Texture2D" uid="uid://dsd3tqfjj3ia7" path="res://Art/scythe_attack_up_1.png" id="2_dbue3"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_m8y2g"]
size = Vector2(73, 68)

[node name="Item" type="Area2D" groups=["Item"]]
script = ExtResource("1_oi086")

[node name="Sprite" type="Sprite2D" parent="."]
texture = ExtResource("2_dbue3")
centered = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(6.5, -58)
shape = SubResource("RectangleShape2D_m8y2g")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.1
autostart = true

[node name="DebugRect" type="ColorRect" parent="."]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -8.0
offset_top = -8.0
offset_right = 8.0
offset_bottom = 8.0
grow_horizontal = 2
grow_vertical = 2

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
